--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   /* cursor: none; */
   background: white;
+  overflow-x: hidden;
 }
 
 .flex-disp {
@@ -175,8 +176,8 @@ a {
 
 .container1 {
   font-family: "Cinzel Decorative", cursive;
-  background: #5928e5;
-  box-shadow: 1px 1px 30px rgb(118, 69, 255);
+  background: #ead4c7;
+  box-shadow: -1px 1px 50px rgb(121, 88, 78);
   height: 100rem;
 }
 
@@ -199,8 +200,8 @@ a {
 
 .container2 {
   font-family: "Cinzel Decorative", cursive;
-  background-color: white;
-  box-shadow: -1px 1px 50px rgb(197, 93, 197);
+  background: #faf7f4;
+  box-shadow: -1px 1px 50px rgb(121, 88, 78);
   height: 125rem;
   transform: translateY(-32rem);
 }
@@ -233,10 +234,10 @@ a {
 .container3 {
   padding-top: 4rem;
   transform: translateY(-70rem);
-  /* height: 220rem; */
+  /* height: 380rem; */
   /* background-color: rgb(252, 223, 144); */
-  background: #5928e5;
-  box-shadow: -1px 1px 50px rgb(0, 59, 221);
+  background: #f2dba6;
+  box-shadow: -1px 1px 50px rgb(51, 42, 0);
   position: relative;
 }
 
@@ -248,7 +249,7 @@ a {
 
 .gradient1 {
   background-image: linear-gradient(
-    #5928e5,
+    #f2dba6,
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
@@ -257,7 +258,7 @@ a {
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
-    #5928e5
+    #f2dba6
   );
   width: 100%;
   height: calc(101vh);
@@ -282,20 +283,23 @@ a {
   letter-spacing: -0.5rem;
   word-spacing: 0.5rem;
   font-family: "Cinzel Decorative", cursive;
-  color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 0.5px rgb(246, 116, 255);
+  -webkit-text-stroke: 0.3px rgb(65, 37, 26);
   -webkit-font-smoothing: antialiased;
+  overflow: hidden;
+
   /* background: -webkit-radial-gradient(rgb(197, 197, 197), rgb(34, 34, 34));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
 }
 
 .sub-motion-heading {
-  transform: translateY(-21rem);
-  font-size: 12rem;
+  transform: translateY(-21.8rem);
+  font-size: 11rem;
   letter-spacing: -0.1rem;
   font-family: "Cinzel Decorative", cursive;
-  color: white;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 15px #867a5e;
+  overflow: hidden;
 }
 
 .motion-heading1 {
@@ -305,18 +309,20 @@ a {
   letter-spacing: -0.5rem;
   word-spacing: 0.5rem;
   font-family: "Cinzel Decorative", cursive;
-  color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 0.3px rgb(246, 116, 255);
+  -webkit-text-stroke: 0.3px rgb(65, 37, 26);
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
 }
 
 .sub-motion-heading1 {
-  font-size: 12rem;
+  font-size: 10rem;
   padding-bottom: 3rem;
   transform: translateY(-21rem);
   letter-spacing: -0.1rem;
   font-family: "Cinzel Decorative", cursive;
+  overflow: hidden;
   color: white;
+  text-shadow: 1px 1px 15px #867a5e;
 }
 
 #dont {
@@ -359,7 +365,109 @@ a {
   letter-spacing: -0.5rem;
   word-spacing: 0.5rem;
   font-family: "Cinzel Decorative", cursive;
-  color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 0.3px rgb(246, 116, 255);
+  overflow: hidden;
+}
+
+.webimg {
+  margin-top: -15rem;
+}
+
+.webapp {
+  box-shadow: 1px 1px 25px rgb(46, 46, 46);
+  width: 28rem;
+  margin: 1rem;
+}
+
+.webapp1 {
+  box-shadow: 1px 1px 25px rgb(46, 46, 46);
+  width: 32rem;
+  margin: 1rem;
+}
+
+.im1 {
+  margin-top: -3rem;
+}
+
+.webimg2 {
+  margin-top: -15rem;
+}
+
+.to-project {
+  text-align: center;
+  color: white;
+  border: none;
+  border-radius: 6rem;
+  background-color: rgb(0, 119, 255);
+  padding: 2rem 4rem;
+}
+
+.visit-ctn {
+  font-size: 2rem;
+  color: white;
+  padding: 2rem;
+  transform: translateY(-18rem);
+}
+
+.heading-1 {
+  margin-top: 12rem;
+  font-size: 6rem;
+  text-align: center;
+  letter-spacing: -0.5rem;
+  word-spacing: 0.5rem;
+  font-family: "Cinzel Decorative", cursive;
   -webkit-font-smoothing: antialiased;
+}
+
+.heading-2 {
+  text-align: center;
+  font-size: 6rem;
+  transform: translateY(-12rem);
+  letter-spacing: -0.1rem;
+  font-family: "Cinzel Decorative", cursive;
+  text-shadow: 1px 1px 15px #867a5e;
+  color: white;
+}
+
+.text-pink {
+  font-size: 5rem;
+  color: white;
+}
+
+.skills_web {
+  font-family: "Cinzel Decorative", cursive;
+  font-size: 5rem;
+  padding: 0 0 0 2rem;
+}
+
+#new {
+  display: inline-block;
+  font-size: 6rem;
+  width: 275vw;
+  text-transform: uppercase;
+  font-family: "Cinzel Decorative", cursive;
+  color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke: 1px rgb(65, 37, 26);
+  -webkit-font-smoothing: antialiased;
+}
+
+.transform {
+  transform: translateX(275vw);
+}
+
+.transform1 {
+  transform: translate(0rem, -8rem);
+}
+
+.exp {
+  animation: spin2 40s linear infinite;
+}
+
+.exp1 {
+  animation: spin2 40s linear infinite;
+}
+
+@keyframes spin2 {
+  100% {
+    transform: translateX(-275vw);
+  }
 }
